fix the layout alignment in skills page

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ html {
   }
 
   .skills-section {
-    max-width: 300px;
+    max-width: 200px;
   }
   
   .section h2 {
@@ -139,19 +139,17 @@ html {
   }
   
   .skills {
-    padding: 32px 42px;
+    padding: 20px 0px 20px 0px;
     margin-bottom: 32px;
     border-radius: 5px;
-  
-    background-color: #f9fafb;
+    background-color: #4b5563;
+    display: flex;
+    align-items: center;
+    flex-direction:column;
   }
   
-  .skills-logo {
-    
-  
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 28px;
+  .skills-logo { 
+    max-height: 100%;
   }
   
   
